@@ -30,7 +30,7 @@ int pthread_detach(
   POSIX_API_Control       *api;
   Objects_Locations        location;
 
-  the_thread = _POSIX_Threads_Get( thread, &location );
+  the_thread = _Thread_Get( thread, &location );
   switch ( location ) {
 
     case OBJECTS_LOCAL:
