@@ -32,7 +32,7 @@ int pthread_join(
   Objects_Locations        location;
   void                    *return_pointer;
 
-  the_thread = _POSIX_Threads_Get( thread, &location );
+  the_thread = _Thread_Get( thread, &location );
   switch ( location ) {
 
     case OBJECTS_LOCAL:
