@@ -56,7 +56,7 @@ int pthread_setschedparam(
   /*
    *  Actually change the scheduling policy and parameters
    */
-  the_thread = _POSIX_Threads_Get( thread, &location );
+  the_thread = _Thread_Get( thread, &location );
   switch ( location ) {
 
     case OBJECTS_LOCAL:
